Added github workflow to develop a docker image and push it to Azure.

--- a/DockerFile
+++ b/DockerFile
@@ -4,6 +4,12 @@ Main funciton to dockerize the Web App.
 
 FROM python:3.11-slim
 
+ARG HUGGINGFACEHUB
+ARG PINECONE
+
+ENV HUGGINGFACEHUB_API_TOKEN=${HUGGINGFACEHUB}
+ENV PINECONE_API_KEY=${PINECONE}
+
 WORKDIR /RAG_ChatPDF
 
 COPY . /RAG_ChatPDF
