--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -58,5 +58,5 @@ jobs:
           location: Central India
           ports: 80 8051
           environment-variables: >
-            HUGGINGFACEHUB_API_TOKEN = ${{ secrets.HUGGINGFACEHUB_API_TOKEN }} 
-            PINECONE_API_KEY = ${{ secrets.PINECONE_API_KEY }}
+            HUGGINGFACEHUB_API_TOKEN=${{ secrets.HUGGINGFACEHUB_API_TOKEN }} 
+            PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}
