--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,14 @@
-langchain
-langchainhub
-langchain_community
-tiktoken
-openai
-bs4
+streamlit==1.38.0
+langchain==0.2.16
+langchainhub==0.1.15
+langchain_community==0.2.16
+langchain-huggingface==0.0.3
+huggingface_hub==0.24.6
+tiktoken==0.7.0
+openai==1.40.6
+bs4==0.0.2
 boto3==1.34.37
-langchain-huggingface
-huggingface_hub
-openai
-#For Vector DB
-pinecone
-pinecone[grpc]
-# For loading pdf
-pypdf
-# For o/p
-pydantic
-#Front_end
-streamlit
-keyboard
+pinecone-client[grpc]==5.0.1
+pypdf==4.3.1
+pydantic==2.8.2
+python-dotenv==1.0.1 
