--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,8 +54,8 @@ jobs:
           registry-login-server: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io 
           registry-username: ${{ secrets.CLIENT_ID }}
           registry-password: ${{ secrets.CLIENT_PASSWORD }}
-          name: rag-web-app
-          location: Central India
+          name: rag-app
+          location: Southeast Asia
           ports: 8501
           environment-variables: >
             HUGGINGFACEHUB_API_TOKEN=${{ secrets.HUGGINGFACEHUB_API_TOKEN }} 
