--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ openai==1.40.6
 bs4==0.0.2
 boto3==1.34.37
 pinecone-client[grpc]==5.0.1
+pinecone
 pypdf==4.3.1
 pydantic==2.8.2
 python-dotenv==1.0.1 
