--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ langchain_community==0.2.16
 langchain-huggingface==0.0.3
 huggingface_hub==0.24.6
 tiktoken==0.7.0
-openai==1.40.6
+openai
 bs4==0.0.2
 boto3==1.34.37
 pinecone
